# eye_in_hand_A5

./: BuildCommands.txt  README.md  kevin
eye_in_hand_pkg/: CMakeLists.txt  setup.cfg  setup.py
eye_in_hand_pkg/src/eye_in_hand_pkg/: hmi_camera.py  hmi_main.py  hmi_product.py
eye_in_hand_pkg/src/eye_in_hand_pkg/hmi/: Avans.qrc  hmi_bediening.py  hmi_calibratie.py  hmi_main.py  hmi_product.py  hmi_status.py  hmi_window.ui  test.py
eye_in_hand_pkg/src/eye_in_hand_pkg/robot/: robot_bediening.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/eye_in_hand_interfaces/share/eye_in_hand_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/eye_in_hand_interfaces/share/eye_in_hand_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  export_eye_in_hand_interfaces__rosidl_generator_cExport-noconfig.cmake  export_eye_in_hand_interfaces__rosidl_generator_cExport.cmake  export_eye_in_hand_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_eye_in_hand_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  (+7 more)
install/eye_in_hand_pkg/lib/eye_in_hand_pkg/: hmi_bediening  hmi_main  hmi_product  hmi_status  hmi_window.ui  test
install/eye_in_hand_pkg/share/eye_in_hand_pkg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_robotiq_controller/include/my_robotiq_controller/: robotiq_controller.hpp
install/my_robotiq_controller/share/my_robotiq_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_ur/share/my_ur/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_ur_description/share/my_ur_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robotiq_app/lib/robotiq_app/: control_gripper  gripper_gui
install/robotiq_app/share/robotiq_app/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robotiq_controllers/share/robotiq_controllers/: local_setup.sh  package.sh
install/robotiq_description/share/robotiq_description/: local_setup.sh  package.sh
install/robotiq_driver/share/robotiq_driver/: local_setup.sh  package.ps1  package.sh
install/robotiq_hardware_tests/share/robotiq_hardware_tests/: local_setup.sh  package.ps1  package.sh
install/serial/include/serial/: serial.h  v8stdint.h
install/serial/share/serial/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/eye_in_hand_interfaces/: CMakeLists.txt
src/eye_in_hand_pkg/: CMakeLists.txt  package.xml  setup.py
(+96 files in other folders)
